FiBo-210: use correct url naming
